[package]
name = "btc_keytester"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
clap = { version = "4.1", features = ["derive"] }
hex = "0.4.3"
rayon = "1.6.1"

[profile.release]
opt-level = "z"