[package]
name = "btc_keytester"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11"
assert_cmd = "2.0.16"
bitcoin = "0.32.5"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
rayon = "1.10.0"
bip38 = "1.1.1"

[profile.release]
opt-level = "z"
